force-app/main/default/objects/Product_Tariff__c/Product_Tariff__c.object-meta.xml
<CustomObject>
    <label>Product Tariff</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Product Tariff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Tariffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>