force-app/main/default/objects/Product_Tariff__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to set which product to join the tariff to</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Tariffs</relationshipLabel>
    <relationshipName>Product_Tariffs</relationshipName>
    <type>Lookup</type>
</CustomField>