force-app/main/default/objects/Product_Tariff__c/fields/Size_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Size_Ratio__c</fullName>
    <label>Size Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>