force-app/main/default/objects/Product_Tariff__c/fields/Utility_NMC_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Utility_NMC_Tariff__c</fullName>
    <label>Utility NMC Tariff</label>
    <referenceTo>Utility_NMC_Tariff__c</referenceTo>
    <relationshipLabel>Product Tariffs</relationshipLabel>
    <relationshipName>Product_Tariffs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>